# spotlight

./: CMakeLists.txt  run.sh  update_systemd_service.sh
include/: client.h  file_crawler.h  ignored_folders.h  sqlite_wrapper.h  trie.h  util.h  window.h
src/client/: client.cpp  search_client.cpp  window.cpp
src/common/: file_crawler.cpp  sqlite_wrapper.cpp  trie.cpp
src/indexer/: file_crawler.cpp  file_crawler.h  main.cpp  sqlite_wrapper.cpp
src/service/: indexer_service.cpp
